@startuml

title __TEST_2's Class Diagram__\n

  namespace com.example.test_2 {
    class com.example.test_2.MainActivity {
        ~ mTopBar : QMUITopBar
        - exitTime : long
        + onBackPressed()
        # onCreate()
    }
  }


  namespace com.example.test_2 {
    class com.example.test_2.WelcomeActivity {
        {static} - TAG : String
        - handler : Handler
        - runnable : Runnable
        # onCreate()
        # onDestroy()
    }
  }


  com.example.test_2.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.test_2.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com

endfooter

@enduml
